--- a/fcc-test-suite-template-master/css/style.css
+++ b/fcc-test-suite-template-master/css/style.css
@@ -2,6 +2,8 @@
     position: fixed;
     top: 0;
     width: 100%;
+    display: flex;
+    flex-direction: row;
 }
 
 @media (max-width: 650px){
@@ -12,4 +14,13 @@
 
 #header{
     display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+#header-img{
+    width: 480px;
+    justify-content: center;
+    display: flex;
+    margin-top: 70px;
 }
